# SplayTree

./: .travis.yml  CMakeLists.txt  README.md  library.h  main.cpp
examples/: main.cpp
include/: SplayTree.hpp
source/: .SplayTree.cpp.swp  SplayTree.cpp  main.cpp
tests/: find.cpp  insert.cpp  remove.cpp
